--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.17",
     "cors": "^2.8.5",
+    "prisma": "^6.10.0",
     "socket.io": "^4.8.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
