--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           username: "ubuntu"
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.PORT }}
-          source: "./docker-compose.prod.yml"
+          source: "./docker-compose.prd.yml"
           target: "$HOME/aplicacoes/chess-api"
           overwrite: true
       - name: Execute remote SSH commands
@@ -30,4 +30,4 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             cd $HOME/aplicacoes/chess-api
-            NOME_CONTAINER=${{env.NOME_CONTAINER}} NODE_ENV=${{env.NODE_ENV}} docker-compose -f docker-compose.prod.yml up -d
+            NOME_CONTAINER=${{env.NOME_CONTAINER}} NODE_ENV=${{env.NODE_ENV}} docker-compose -f docker-compose.prd.yml up -d
