--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "incremental": true,
+    "target": "es2022",
     "module": "commonjs",
     "rootDir": "src",
+    "declaration": true,
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
