--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 NODE_ENV="hml" #não alterar
 DATABASE_URL="dbused://user:password@urlconnection:port/schema"
 NOME_CONTAINER="container_name"
+RECONNECTION_TIMER=6000
