--- a/docker-compose.prd.yml
+++ b/docker-compose.prd.yml
@@ -4,13 +4,14 @@ services:
     container_name: ${NOME_CONTAINER}
     environment:
       DATABASE_URL: "mysql://chessuser:chesspass@mariadb:3306/chessdb"
-      REDIS_URL: "redis://:Redis2019!@redis:6379"
+      # REDIS_URL: "redis://:Redis2019!@redis:6379"
       NODE_ENV: ${NODE_ENV}
+      
     depends_on:
       mariadb:
         condition: service_healthy
-      redis:
-        condition: service_started
+      # redis:
+      #   condition: service_started
     ports:
       - "3001:3001"
     networks:
@@ -35,11 +36,11 @@ services:
       timeout: 5s
       retries: 3
 
-  redis:
-    image: redis
-    command: redis-server --requirepass Redis2019!
-    ports:
-      - "6379:6379"
+  # redis:
+  #   image: redis
+  #   command: redis-server --requirepass Redis2019!
+  #   ports:
+  #     - "6379:6379"
 
 volumes:
   mariadb_data:
