--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn src/index.ts",
-    "build": "tsc",
+    "build": "npx tsc --build",
     "start": "npx prisma generate && npx prisma migrate deploy && node dist/index.js"
   },
   "keywords": [],
